improve SPark joins and viral attributes